deployment-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-web
  labels:
    app: nodejs-web
spec:
  replicas: 3
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - "deployment"
  template:
    metadata:
      name: nodejs-web
      labels:
        app: "deployment"
        name: nodejs-web
      annotations:
        description: this is example for deployment
    spec:
      containers:
        - name: nodejs-web
          image: khannedy/nodejs-web:2
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 5
            timeoutSeconds: 7
