env-variable.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs-writer
  labels:
    name: nodejs-writer
spec:
  volumes:
    - name: html
      emptyDir: {}
  containers:
  - name: nodejs-writer
    image: khannedy/nodejs-writer
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 4000
    volumeMounts:
      - name: html
        mountPath: /app/folder-from-env
