configMap.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: NodePort
  selector:
    name: nodejs-env
  ports:
  - port: 8080
    targetPort: 3000
    nodePort: 30031
