doenward-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  selector:
    app: nodejs-env
  ports:
  - port: 80
    targetPort: 30001
