horizontal-pod-auto-scaller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-web
  labels:
    version: v1.0.0.3
  annotations:
    description: this is example for horizontal auto scaller
spec:
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - "nodejs"
    matchLabels:
      name: nodejs-web
  template:
    metadata:
      name: nodejs-web
      labels:
        app: "nodejs"
        name: nodejs-web
    spec:
      containers:
        - name: nodejs-web
          image: khannedy/nodejs-web:2
          ports:
            - containerPort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-web-service
spec:
  type: NodePort
  selector:
    app: "nodejs"
    name: nodejs-web
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30001
