multi-container-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - port: 8080
    targetPort: 80
    name: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 3000
      targetPort: 3000
      name: nodejs-web
---
apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    name: curl
spec:
  containers:
  - name: curl
    image: khannedy/nginx-curl
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
