nginx-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-nodeport
  labels:
    app: service-node-port
spec:
  type: NodePort
  selector:
    name: snginx-service-nodeport
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
