secret.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-servie
spec:
  type: NodePort
  selector:
    app: nodejs-app
  ports:
  - port: 8080
    targetPort: 3000
    nodePort: 30301
