service-external.yaml
# Service diguankaan untuk intrnal Pod
# tetapi service juga bisa digunakan untuk gateway untuk applikasi external yang berada diluar kunernetes cluster
# misalnya seprti thirdparty API
apiVersion: v1
kind: Service
metadata:
  name: external-service
  labels:
    name: external-service
spec:
  type: ExternalName
  externalName: google.com
  ports:
  - port: 80


---

apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    name: curl
spec:
  containers:
  - name: curl
    image: khannedy/nginx-curl
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
