sharing-volume.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    name: nginx
    sharing-volume: "yes"
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30001
