nginx-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    app: nginx-ingress
spec:
  rules:
  - host: dev.alliano.net
    http:
      paths:
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: nginx-service
            port:
              number: 80
